<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_first_toolbar_title" />

    <string name="app_name">Advokatska Tarifa</string>
    <string name="create_case">Dodaj</string>
    <string name="find_case">Nadji</string>
    <string name="edit_case">Promeni</string>
    <string name="navigation_edit">Izmeni Slucaj</string>
    <string name="navigation_delete">Obrisi Slucaj</string>
    <string name="navigation_settings">Podesavanja</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
    <string name="navigation_title">My Title</string>
    <string name="settings">Settings</string>
    <string name="print_pdf">Stampaj konacnu tarifu</string>
    <string name="unos_stranke_details_txt">Osnovne podatke o strankama mozete dodati sad ili posle, takodje ne morate ih dodavati ako zelite da obavite samo brzo racunanje vec postojeceg slucaja.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postupak_broj_stranaka">Izaberi postupak i broj stranaka</string>
</resources>
